--- a/Templates/HTML/index.html
+++ b/Templates/HTML/index.html
@@ -12,12 +12,7 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Nav-Bar start -->
-        <div class="topnav">
-          <a class="active" href="*index_file*">Home</a>
-          <a href="*how_it_works*">How it Works</a>
-          <a href="*examples*">Examples</a>
-          <a href="*FAQs*">FAQs</a>
-        </div>
+        *top_nav*
         <!-- Nav-Bar end -->
 
         <!-- Page Content -->
