Added a little script to change the length of a movie, also almost finished the documentation creator code.

--- a/Templates/HTML/QuickStart.html
+++ b/Templates/HTML/QuickStart.html
@@ -72,7 +72,7 @@
   </tr>
   </table>
   <br />
-  From here you can also set the *length_of_animation* and the *movie_format*. For all the settings, see the Settings Directory (gray button above).
+  From here you can also set the *movie_length* and the *movie_format*. For all the settings, see the Settings Directory (gray button above).
 </p>
 
 <br />
