--- a/Templates/HTML/table.html
+++ b/Templates/HTML/table.html
@@ -1,39 +1,29 @@
 *header_text*
 <body>
     <div id="wrapper">
-    <!-- <div class="container"> -->
-      <div class="row">
-       <div width=190px>
-       <!-- Sidebar -->
-
-          <!-- <div id="sidebar-wrapper"> -->
-           <ul class="sidebar-nav2">
-            *sidebar_text*
-           </ul>
-          <!-- </div> -->
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                *sidebar_text*
+            </ul>
         </div>
-          <!-- Nav-Bar start -->
-          <div class="topnav" style="margin-left: 205px; width:100%;">
-            <a class="active" href="*index_file*">Home</a>
-            <a href="*how_it_works*">How it Works</a>
-            <a href="*examples*">Examples</a>
-            <a href="*FAQs*">FAQs</a>
-          </div>
-          <!-- Nav-Bar end -->
+        <!-- /#sidebar-wrapper -->
+        
+        <!-- Nav-Bar start -->
+        *top_nav*
+        <!-- Nav-Bar end -->
 
        <div style="margin-left: 190px;">
          <div class="container">
            <br />
            <h2>*table_name*</h2>
            <div class="datagrid">
-             *table_data*
+               *table_data*
            </div>
          </div>
        </div>
-      </div>
-      </div>
-    <!-- </div> -->
-  <!-- </div> -->
+       
+    </div>
 </body>
 
 </html>
