Almost finished with neatened up documentation creator

--- a/Templates/HTML/HeaderTxt.html
+++ b/Templates/HTML/HeaderTxt.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>*title*</title>
+    <title>*Pagetitle*</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 
