--- a/Templates/HTML/How_to_edit.html
+++ b/Templates/HTML/How_to_edit.html
@@ -14,9 +14,9 @@
       </p>
       *Mov_Mak_Edit*
     <h4>Editting the Documentation Code</h4>
-      *Docs_Edit*
+      Still to come
     <h4>Misc</h4>
-      *Misc*
+      Still to come
   </div>
 
 
