--- a/Templates/HTML/table.html
+++ b/Templates/HTML/table.html
@@ -1,28 +1,29 @@
 *header_text*
 <body>
     <div id="wrapper">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                *sidebar_text*
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-        
-        <!-- Nav-Bar start -->
-        *top_nav*
-        <!-- Nav-Bar end -->
+       <div class="row">
+           <div width=190px>
+               <!-- Sidebar -->
+                <ul class="sidebar-nav2">
+                    *sidebar_text*
+                </ul>
+			  </div>
+           <!-- /#sidebar-wrapper -->
+           
+           <!-- Nav-Bar start -->
+           *top_nav*
+           <!-- Nav-Bar end -->
 
-       <div style="margin-left: 190px;">
-         <div class="container">
-           <br />
-           <h2>*table_name*</h2>
-           <div class="datagrid">
-               *table_data*
+           <div style="margin-left: 190px;">
+             <div class="container">
+               <br />
+               <h2>*table_name*</h2>
+               <div class="datagrid">
+                   *table_data*
+               </div>
+             </div>
            </div>
-         </div>
-       </div>
-       
+		 </div>
     </div>
 </body>
 
