--- a/Templates/HTML/TopNav.html
+++ b/Templates/HTML/TopNav.html
@@ -1,5 +1,5 @@
 <div class="topnav">
-  <a class="active" href="*index_file*">Home</a>
-  <a href="*how_it_works_file*">How it Works</a>
-  <a href="*how_to_edit_file*">How to Edit</a>
+  <a class="active" href="*index*">Home</a>
+  <a href="*How_it_works*">How it Works</a>
+  <a href="*How_to_edit*">How to Edit</a>
 </div>
