Rewrote the create documentation code to make it far more readable/editable and so it creates a neater file structure and so it reads the docstrings on top of the files.

--- a/Templates/HTML/TopNav.html
+++ b/Templates/HTML/TopNav.html
@@ -1,4 +1,4 @@
-<div class="topnav">
+<div class="topnav" *topnavStyle*>
   <a class="active" href="*index*">Home</a>
   <a href="*How_it_works*">How it Works</a>
   <a href="*How_to_edit*">How to Edit</a>
