--- a/Docs/css/table.css
+++ b/Docs/css/table.css
@@ -35,4 +35,9 @@
       color: black;
       font-size: 10px;
     }
+    table#files
+    {
+    border-collapse:separate;
+    border-spacing:10px 20px;
+    }
     </style>
