--- a/Templates/HTML/How_it_works.html
+++ b/Templates/HTML/How_it_works.html
@@ -12,12 +12,11 @@
     <div class="row">
       <div class="col-sm-12">
         <p>
-          The python code works by looking in the path specified for the relevant files. It then parses this data and uses it to create the wavefunction data. This data is then saved as a cube file and visualised by VMD. VMD then uses the tachyon ray-tracing engine to render the image as a tachyon, .tga, file. Python will loop through all the steps specified, calling VMD to create a .tga image for each one. To create the shape of the wavefunction at each step the code uses the following formula:
+            <a href='https://en.wikipedia.org/wiki/Table_of_spherical_harmonics#Real_spherical_harmonics' target="_blank">real spherical harmonics</a> 
         </p>
         <img src="*doc_img_folder*/MolecularWavefunction.png" alt="Equation for the movie maker (tell Matt that the image isn't showing!)" style="width: 100%; z-index: 0;">
         <p>
           <p>
-            The P-orbitals are calculated using a modified form of <a href='https://en.wikipedia.org/wiki/Table_of_spherical_harmonics#Real_spherical_harmonics' target="_blank">real spherical harmonics</a>. This is to make the calculation slightly more efficient and I didn't find it changed the shape in a significant way (the visualisations are meant to give a qualitative idea of the shape of the orbital).
           </p>
           <p>
             The other terms are just scalar quantities: the pvecs, aom coefficients and molecular coefficients. The molecular coefficients are complex numbers so the magnitude is used. Depending on the *type_of_wavefunction* chosen the isosurfaces will be coloured based on the position of the product of the molecular and AOM coefficients in the complex plane.
