--- a/Templates/HTML/How_to_edit.html
+++ b/Templates/HTML/How_to_edit.html
@@ -15,8 +15,41 @@
       *Mov_Mak_Edit*
     <h4>Editting the Documentation Code</h4>
       Still to come
-    <h4>Misc</h4>
-      Still to come
+      <br>
+      <br>
+    <div class="row">
+      <div class="col-sm-12">
+        <h4>Misc</h4>
+      </div>
+      <div class="col-sm-12">
+        <h5>Some Important Variables</h5>
+      </div>
+      <div class="col-sm-12">
+        <h6>all_settings</h6>
+        <p>
+          The `all_settings' variable is probably the most important variable in
+          the code. It is the container that stores all the data used within the
+          code.
+        </p>
+      </div>
+      <div class="col-sm-6">
+        <h6>mol_info</h6>
+        <p>
+          The `all_settings['mol_info']' variable is a dictionary mapping the
+          atom number to the molecule number. The keys ... The values ...
+          code.
+        </p>
+      </div>
+      <div class="col-sm-6">
+        <h6>AOM_D</h6>
+        <p>
+          The `all_settings['AOM_D']' variable is a dictionary mapping the
+          atom number to the aom coefficient and the index of the atom. The keys
+          .... The values ...
+          code.
+        </p>
+      </div>
+    </div>
   </div>
 
 
