--- a/Templates/HTML/How_it_works.html
+++ b/Templates/HTML/How_it_works.html
@@ -184,6 +184,47 @@
         </p>
       </div>
     </div>
+    <br> 
+    <br> 
+    <div class="row">
+      <div class="col-sm-12">
+         <h3>Some Important Optimisations</h3>
+         <p>
+            There are some important optimisations to be aware of as they may affect
+            how the code runs such as the minimum absolute population threshold, the
+            nearest neighbour list and minimum data in a file before writing it.
+         </p>
+         <br>
+         <br>
+         <h5>Under Development</h5>
+      </div>
+    </div>
+    <br> 
+    <br> 
+    <div class="row">
+      <div class="col-sm-12">
+         <h3>The Interface with VMD</h3>
+         <p>
+            The interface with VMD is fairly simple. The code reads in a template TCL
+            script and replaces the variables within it. However, there are a few
+            subtleties that would be useful to document. These include the way we set
+            the color of the isosurface, the flags we use when rendering the file
+            with tachyon and the way we check whether vmd is finished (what the
+            vmd_timeout means).
+         </p>
+         <br>
+         <br>
+         <h5>Under Development</h5>
+      </div>
+    </div>
+    <br> 
+    <br> 
+    <div class="row">
+      <div class="col-sm-12">
+         <h3></h3>
+      </div>
+    </div>
+
   </div>
 
 
