--- a/Templates/HTML/How_to_edit.html
+++ b/Templates/HTML/How_to_edit.html
@@ -10,7 +10,7 @@
     <h2>How to Edit</h2>
     <h4>Editting the Movie Maker Code</h4>
       <p>
-        The movie maker code is distributed among lots of different files, which I've tried to divide into logical folders and further sub-divide into different files. An explanation of the files and folders is given below:
+        The movie maker code is quite big now so I've tried to divide the code into logical folders and further sub-divide into different files. An explanation of the files and folders is given below. The ones with python code are src (containing all the visualisation code) and init (containing all the initialisation stuff).
       </p>
       *Mov_Mak_Edit*
     <h4>Editting the Documentation Code</h4>
