--- a/Templates/HTML/HeaderTxt.html
+++ b/Templates/HTML/HeaderTxt.html
@@ -27,4 +27,18 @@
       .CODE {color: magenta;}
       .param_link:hover {font-weight: bold;}
     </style>
+    <!-- /#wrapper -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="*vendor_folder_path*jquery/jquery.min.js"></script>
+    <script src="*vendor_folder_path*bootstrap/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Menu Toggle Script -->
+    <script>
+       $("#menu-toggle2").click(function(e) {
+           e.preventDefault();
+           $("#wrapper").toggleClass("toggled");
+       });
+    </script>
+
 </head>
