--- a/Templates/HTML/TopNav.html
+++ b/Templates/HTML/TopNav.html
@@ -2,6 +2,7 @@
   <a class="active" href="*index*">Home</a>
   <a href="*How_it_works*">How it Works</a>
   <a href="*How_to_edit*">How to Edit</a>
+  <a href="*Test*">Test</a>
   <!--<a href="#menu-toggle" id="menu-toggle2" style="float: right;">Settings Directory</a>-->
 </div>
 
