Added transition state density -it looks sensible

--- a/Templates/HTML/table.html
+++ b/Templates/HTML/table.html
@@ -14,7 +14,7 @@
            *top_nav*
            <!-- Nav-Bar end -->
 
-           <div style="margin-left: 190px;">
+           <div style="margin-left: 190px; width: calc(100% - 190px);">
              <div class="container">
                <br />
                <h2>*table_name*</h2>
