--- a/Templates/HTML/index.html
+++ b/Templates/HTML/index.html
@@ -30,17 +30,17 @@
 
                 <h3>Examples</h3>
                 <h4>1D Chain</h4>
-                <video width="90%" controls>
+                <video style="max-width:90%; max-height: 90%" controls>
                   <source src="*doc_img_folder*Rubrene_100K.mp4" type="video/mp4">
                 </video>
 
                 <h4>2D Plane</h4>
-                <video width="90%" controls>
+                <video style="max-width:90%; max-height: 90%" controls>
                   <source src="*doc_img_folder*Plane2.mp4" type="video/mp4">
                 </video>
 
                 <h4>3D Cuboid</h4>
-                <video width="90%" controls>
+                <video style="max-width:90%; max-height: 90%" controls>
                   <source src="*doc_img_folder*3D_cube.mp4" type="video/mp4">
                 </video>
 
