--- a/Templates/HTML/QuickStart.html
+++ b/Templates/HTML/QuickStart.html
@@ -50,16 +50,16 @@
   <table style="width: 50%; margin: auto;">
     <tr>
       <td>
-      *start_step* = 0
+      *start_time* = 0
       </td>
       <td>
-          <span style="color:gray"># Start at step 0</span>
+          <span style="color:gray"># Start at time 0 (step 0)</span>
       </td>
     </tr>
   <tr>
-    <td>  *end_step* = 'all' </td>
+    <td>  *end_time* = 'all' </td>
     <td>
-       <span style="color:gray;"># Iterate over all steps</span>
+       <span style="color:gray;"># Iterate over the whole simulation data</span>
     </td>
   </tr>
   <tr>
